--- a/exercicios/aula05/ex002.html
+++ b/exercicios/aula05/ex002.html
@@ -6,13 +6,13 @@
     <title>my first program</title>
     <style>
         body {
-            background-color: lightblue;
+            background-color: rgb(74, 71, 219);
             color: white;
             
         }
 
         h1 {
-            color: yellow;
+            color: rgb(255, 218, 11);
         }
     </style>
 </head>
@@ -21,9 +21,9 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque eum mollitia pariatur assumenda, facilis similique corporis dolore dignissimos enim? Quis sint deleniti distinctio necessitatibus natus recusandae possimus id reiciendis dicta?</p>
     
     <script>
-        window.alert('hello, world!');//window popup
-        window.confirm('ok?'); // window pop up with Ok and Cancel
-        window.prompt('whats your name?'); //window popup with a prompt to insert some text
+
+        var nome = window.prompt('whats your name?'); //window popup with a prompt to insert some text
+        window.alert('é um grande prazer te conhecer, ' + nome) //concatenação
 
         /*
         window.alert('hello, world!'); window popup
