--- a/exercicios/aula12ex/modelo.html
+++ b/exercicios/aula12ex/modelo.html
@@ -16,13 +16,15 @@
             testando...
         </div>
         <div>
-
+            !
         </div>
 
     </section>
     <footer>
         <p>&copy; CursoemVideo</p>
     </footer>
+
+    <script src="script.js"></script>
     
 </body>
 </html>
