--- a/exercicios/aula05/ex002.html
+++ b/exercicios/aula05/ex002.html
@@ -19,6 +19,13 @@
 <body>
     <h1>Hello, world!</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque eum mollitia pariatur assumenda, facilis similique corporis dolore dignissimos enim? Quis sint deleniti distinctio necessitatibus natus recusandae possimus id reiciendis dicta?</p>
+
+
+    <div class="container"></div>
+
+
+
+
     
     <script>
 
