--- a/exercicios/aula14/aula14ex/ex16/modelo.html
+++ b/exercicios/aula14/aula14ex/ex16/modelo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercicio</title>
+    <title>Vamos Contar!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
