--- a/exercicios/aula14/aula14ex/ex17/modelo.html
+++ b/exercicios/aula14/aula14ex/ex17/modelo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercicio</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -13,11 +13,14 @@
     </header>
     <section>
         <div>
-            Número: <input type="number" name="txtn" id="txtn">
-            <input type="button" value="Gerar Tabuada">
+            <p>Número: <input type="number" name="num" id="txtn">
+                <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
+            
         </div>
         <div>
-            !
+            <select name="tabuada" id="seltab">
+                <option value="">Digite um número acima</option>
+            </select>
         </div>
 
     </section>
