--- a/template_cart/index.html
+++ b/template_cart/index.html
@@ -42,7 +42,7 @@
                     <div class="pl-md-0 pl-2">
                         <span class="fa fa-minus-square text-secondary"></span>
                             <span class="px-md-3 px-1" id="quantidade0">0</span>
-                        <span class="fa fa-plus-square text-secondary"></span>
+                        <span class="fa fa-plus-square text-secondary" onclick="adicionarItem(0)"></span>
                     </div>
                     <div class="pl-md-0 pl-1"><b>R$</b> <span id="total0"></span></div>
                     <div class="close">&times;</div>
@@ -61,7 +61,7 @@
                     <div class="pl-md-0 pl-2">
                         <span class="fa fa-minus-square text-secondary"></span>
                             <span class="px-md-3 px-1" id="quantidade1">0</span>
-                        <span class="fa fa-plus-square text-secondary"></span>
+                        <span class="fa fa-plus-square text-secondary"onclick="adicionarItem(1)"></span>
                     </div>
                     <div class="pl-md-0 pl-1"><b>R$</b><span id="total1"></span></div>
                     <div class="close">&times;</div>
@@ -90,5 +90,6 @@
     
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/cartmkt.js"></script>
 </body>
 </html>
